<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_label">Settings</string>
    <string name="more_settings_label">More</string>
    <string name="display_settings">Display</string>
    <string name="brightness">Brightness level</string>
    <string name="auto_brightness_title">Adaptive brightness</string>
    <string name="auto_brightness_summary">Adjust screen brightness to environment</string>
    <string name="theme_toggle_title">Theme</string>
    <string name="condition_night_display_title">Night Light is on</string>
    <string name="keywords_display" translatable="false">screen, touchscreen</string>
    <string name="keywords_display_brightness_level" translatable="false">dim screen, touchscreen, battery</string>
    <string name="keywords_display_auto_brightness" translatable="false">dim screen, touchscreen, battery</string>
    <string name="keywords_display_night_display" translatable="false">dim screen, night, tint</string>
    <string name="empty_placeholder" translatable="false">&#160;</string>
    <string name="network_and_internet">Network &amp; internet</string>
    <string name="mobile_network_settings">Mobile network</string>
    <string name="mobile_network_summary_count">
        {count, plural,
            =1    {# SIM}
            other {# SIMs}
        }
    </string>
    <string name="mobile_network_active_sim">Active / SIM</string>
    <string name="mobile_network_inactive_sim">Inactive / SIM</string>
    <string name="mobile_network_active_esim">Active / eSIM</string>
    <string name="mobile_network_inactive_esim">Inactive / eSIM</string>
    <string name="mobile_network_list_add_more">Add more</string>
    <string name="mobile_network_toggle_title">Mobile data</string>
    <string name="mobile_network_toggle_summary">Access data using mobile network</string>
    <string name="mobile_network_mobile_network_toggle_title">Mobile network</string>
    <string name="mobile_network_mobile_network_toggle_summary">Use mobile data</string>
    <string name="mobile_network_state_off">Off</string>
    <string name="confirm_mobile_data_disable">Turn off mobile data?</string>
    <string name="sim_selection_required_pref">Selection required</string>
    <string name="sim_change_data_title">
        Use <xliff:g id="carrier" example="Google Fi">%1$s</xliff:g> for mobile data?
    </string>
    <string name="sim_change_data_message">
        You\u0027re using <xliff:g id="carrier2" example="Google Fi">%2$s</xliff:g> for mobile data.
        If you switch to <xliff:g id="carrier1" example="Verizon">%1$s</xliff:g>,
        <xliff:g id="carrier2" example="Google Fi">%2$s</xliff:g> will no longer be used for mobile
        data.
    </string>
    <string name="sim_change_data_ok">
        Use <xliff:g id="carrier" example="Verizon">%1$s</xliff:g>
    </string>
    <string name="roaming_title">Roaming</string>
    <string name="roaming_summary">Connect to data services when roaming</string>
    <string name="roaming_alert_title">Allow data roaming?</string>
    <string name="roaming_warning">Roaming charges may apply.</string>
    <string name="data_usage_settings">Data usage</string>
    <string name="data_usage_title">Primary data</string>
    <string name="data_used_formatted"><xliff:g name="value" example="500">^1</xliff:g> <xliff:g name="units" example="GB">^2</xliff:g> used</string>
    <string name="cell_data_warning"><xliff:g name="amount" example="1 GB">^1</xliff:g> data warning</string>
    <string name="cell_data_limit"><xliff:g name="amount" example="1 GB">^1</xliff:g> data limit</string>
    <string name="cell_data_warning_and_limit"><xliff:g name="amount" example="1 GB">^1</xliff:g> data warning / <xliff:g name="amount" example="2 GB">^2</xliff:g> data limit</string>
    <string name="billing_cycle_days_left">
        {count, plural,
            =1    {# day left}
            other {# days left}
        }
    </string>
    <string name="billing_cycle_none_left">No time remaining</string>
    <string name="billing_cycle_less_than_one_day_left">Less than 1 day left</string>
    <string name="carrier_and_update_text">Updated by <xliff:g name="carrier" example="Google Fi">^1</xliff:g> <xliff:g name="time" example="3m">^2</xliff:g> ago</string>
    <string name="no_carrier_update_text">Updated <xliff:g name="time" example="3m">^2</xliff:g> ago</string>
    <string name="carrier_and_update_now_text">Updated by <xliff:g name="carrier" example="Google Fi">^1</xliff:g> just now</string>
    <string name="no_carrier_update_now_text">Updated just now</string>
    <string name="launch_manage_plan_text">View plan</string>
    <string name="app_data_usage">App data usage</string>
    <string name="data_usage_app_restricted">restricted</string>
    <string name="cycle_reset_day_of_month_picker_title">Usage cycle reset date</string>
    <string name="cycle_reset_day_of_month_picker_subtitle">Date of each month:</string>
    <string name="cycle_reset_day_of_month_picker_positive_button">Set</string>
    <string name="data_warning_limit_title">Data warning &amp; limit</string>
    <string name="app_usage_cycle">App data usage cycle</string>
    <string name="mobile_data_usage">Mobile data usage</string>
    <string name="set_data_warning">Set data warning</string>
    <string name="data_warning">Data warning</string>
    <string name="set_data_limit">Set data limit</string>
    <string name="data_limit">Data limit</string>
    <string name="data_usage_limit_dialog_title">Limiting data usage</string>
    <string name="data_usage_limit_dialog_mobile" >Your vehicle\u2019s head unit will turn off mobile data once it reaches the limit you set.\n\nSince data usage is measured by the head unit, and your carrier may account for usage differently, consider setting a conservative limit.</string>
    <string name="data_usage_warning_editor_title">Set data usage warning</string>
    <string name="data_usage_limit_editor_title">Set data usage limit</string>
    <string name="data_usage_settings_footer">Data usage is measured by your device. It may vary from your mobile carrier\u2019s data.</string>
    <string name="usage_bytes_threshold_picker_positive_button">Set</string>
    <string name="data_usage_warning_save_title">Save</string>
    <string name="network_and_internet_oem_network_title">OEM network</string>
    <string name="network_and_internet_vehicle_internet_title">Vehicle internet</string>
    <string name="network_and_internet_oem_network_dialog_description">Turning off the vehicle internet may prevent some vehicle features or apps from working.\n\nCritical data required to operate your vehicle will continue to be shared with the vehicle manufacturer.</string>
    <string name="network_and_internet_oem_network_dialog_confirm_label">Turn off anyway</string>
    <string name="network_and_internet_oem_network_disabled_footer">Vehicle internet is turned off. This may prevent some vehicle features or apps from working. Critical data required to operate your vehicle will continue to be shared with the vehicle manufacturer.</string>
    <string name="network_and_internet_data_usage_time_range_summary">%1$s used %2$s - %3$s</string>
    <string name="network_and_internet_join_other_network_title">Join other network</string>
    <string name="network_and_internet_network_preferences_title">Network preferences</string>
    <string name="wifi_settings">Wi\u2011Fi</string>
    <string name="wifi_starting">Turning Wi\u2011Fi on\u2026</string>
    <string name="wifi_stopping">Turning off Wi\u2011Fi\u2026</string>
    <string name="loading_wifi_list">Loading Wi\u2011Fi list</string>
    <string name="wifi_disabled">Wi\u2011Fi disabled</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_setup_add_network">Add network</string>
    <string name="wifi_setup_connect">Connect</string>
    <string name="wifi_connecting">Connecting\u2026</string>
    <string name="wifi_disconnected">Not connected</string>
    <string name="wifi_not_in_range_message">Network not in range</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_no_network_name">Please enter a network name</string>
    <string name="wifi_ssid">Network name</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_signal_strength">Signal strength</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_speed">Link speed</string>
    <string name="wifi_frequency">Frequency</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="show_password">Show password</string>
    <string name="default_network_name_summary">Enter network name</string>
    <string name="default_password_summary">Enter password</string>
    <string name="access_point_tag_key">access_point_tag_key</string>
    <string-array name="wifi_signals">
        <item>Poor</item>
        <item>Poor</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string name="link_speed">%1$d Mbps</string>
    <string name="wifi_band_24ghz">2.4 GHz</string>
    <string name="wifi_band_5ghz">5 GHz</string>
    <string name="wifi_network_detail">Network details</string>
    <string name="wifi_mac_address">MAC address</string>
    <string name="wifi_ip_address_title">IP address</string>
    <string name="wifi_subnet_mask">Subnet mask</string>
    <string name="wifi_dns">DNS</string>
    <string name="wifi_details_ipv6_address_header">IPv6 addresses</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="language_settings">Languages</string>
    <string name="system_setting_title">System</string>
    <string name="system_update_settings_title">System updates</string>
    <string name="about_settings">About</string>
    <string name="legal_information">Legal information</string>
    <string name="reset_options_title">Reset options</string>
    <string name="reset_options_summary">Network, apps, or device reset</string>
    <string name="security_lock_password">Password</string>
    <string name="lockscreen_choose_your_password">Choose your password</string>
    <string name="choose_lock_password_hints">Must be at least 4 characters</string>
    <string name="backspace_key">Backspace key</string>
    <string name="enter_key">Enter key</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="aspect_ratio_dialog_title">Aspect Ratio Settings</string>
    <string name="aspect_ratio_dialog_message">The app will restart when you change the aspect ratio. You may lose unsaved changes. Some apps may not be optimized for certain aspect ratios.</string>
    <string name="aspect_ratio_dialog_app_default_text">App default</string>
    <string name="aspect_ratio_dialog_full_screen_text">Full screen</string>
    <string name="aspect_ratio_dialog_half_screen_text">Half screen</string>
    <string name="display_density_dialog_smaller_text">0.85x</string>
    <string name="display_density_dialog_default_text">1x (default)</string>
    <string name="display_density_dialog_large_text">1.25x</string>
    <string name="display_density_dialog_larger_text">1.5x</string>
</resources>