<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2019 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<!--
    NOTE:
    This layout mirrors pin_pad_view.xml with just the styling differences between setup wizard and
    settings applied. Any changes to ids/components outside of styling needs to be duplicated in
    that file or breakages will occur.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Row 1 -->
    <Button
        android:id="@+id/key1"
        style="@style/PinPadKey.SetupWizard"
        android:tag="1"
        android:text="@string/one"/>
    <Button
        android:id="@+id/key2"
        style="@style/PinPadKey.SetupWizard"
        android:tag="2"
        android:text="@string/two"/>
    <Button
        android:id="@+id/key3"
        style="@style/PinPadKey.SetupWizard"
        android:tag="3"
        android:text="@string/three"/>

    <!-- Row 2 -->
    <Button
        android:id="@+id/key4"
        style="@style/PinPadKey.SetupWizard"
        android:tag="4"
        android:text="@string/four"/>
    <Button
        android:id="@+id/key5"
        style="@style/PinPadKey.SetupWizard"
        android:tag="5"
        android:text="@string/five"/>
    <Button
        android:id="@+id/key6"
        style="@style/PinPadKey.SetupWizard"
        android:tag="6"
        android:text="@string/six"/>

    <!-- Row 3 -->
    <Button
        android:id="@+id/key7"
        style="@style/PinPadKey.SetupWizard"
        android:tag="7"
        android:text="@string/seven"/>
    <Button
        android:id="@+id/key8"
        style="@style/PinPadKey.SetupWizard"
        android:tag="8"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/key9"
        style="@style/PinPadKey.SetupWizard"
        android:tag="9"
        android:text="@string/nine"/>

    <!-- Row 4 -->
    <ImageButton
        android:id="@+id/key_backspace"
        style="@style/PinPadKey.SetupWizard"
        android:contentDescription="@string/backspace_key"
        android:src="@drawable/suw_ic_backspace"
        android:tint="@color/car_body3_light"/>
    <Button
        android:id="@+id/key0"
        style="@style/PinPadKey.SetupWizard"
        android:tag="0"
        android:text="@string/zero"/>
    <ImageButton
        android:id="@+id/key_enter"
        style="@style/PinPadKey.SetupWizard"
        android:contentDescription="@string/enter_key"
        android:src="@drawable/ic_done"
        android:tint="@color/car_body3_light"/>
</merge>
