<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res-auto"
                  android:orderingFromXml="false"
                  android:title="@string/system_setting_title">
    <Preference
        android:fragment="com.android.car.settings.system.LanguagePickerFragment"
        android:icon="@drawable/ic_language"
        android:key="language_settings_entry"
        android:order="0"
        android:title="@string/language_settings"
        settings:controller="com.android.car.settings.system.LanguageSettingsEntryPreferenceController"/>
    <Preference
        android:icon="@drawable/ic_system_update"
        android:key="system_update_settings"
        android:order="100"
        android:title="@string/system_update_settings_title"
        settings:controller="com.android.car.settings.system.SystemUpdatePreferenceController">
        <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS"/>
    </Preference>
    <Preference
        android:key="system_extra_settings"
        android:order="200"
        settings:controller="com.android.car.settings.common.ExtraSettingsPreferenceController">
        <intent android:action="com.android.settings.action.EXTRA_SETTINGS">
            <extra android:name="com.android.settings.category"
                   android:value="com.android.settings.category.system"/>
        </intent>
    </Preference>
    <Preference
        android:fragment="com.android.car.settings.system.AboutSettingsFragment"
        android:icon="@drawable/ic_settings_about"
        android:key="about_settings_entry"
        android:order="300"
        android:title="@string/about_settings"
        settings:controller="com.android.car.settings.system.AboutSettingsEntryPreferenceController"/>
    <Preference
        android:fragment="com.android.car.settings.system.LegalInformationFragment"
        android:icon="@drawable/ic_settings_about"
        android:key="legal_information_entry"
        android:order="400"
        android:title="@string/legal_information"
        settings:controller="com.android.car.settings.common.NoSetupPreferenceController"/>
    <Preference
        android:fragment="com.android.car.settings.system.ResetOptionsFragment"
        android:icon="@drawable/ic_restore"
        android:key="reset_options_entry"
        android:order="500"
        android:summary="@string/reset_options_summary"
        android:title="@string/reset_options_title"
        settings:controller="com.android.car.settings.common.NoSetupPreferenceController"/>
</PreferenceScreen>
