<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Radio Button tag values should be the float value corresponding to the inverse of the
         expected magnification. Example, if the display density is expected to be increased by
         1.25%, the corresponding tag should be 1/1.25 = 0.8 -->

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="1.18"
        android:text="@string/display_density_dialog_smaller_text" />

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="1"
        android:text="@string/display_density_dialog_default_text" />

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="0.8"
        android:text="@string/display_density_dialog_large_text" />

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="0.7"
        android:text="@string/display_density_dialog_larger_text" />

</merge>
