<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AspectRatioDialogContainer">

        <LinearLayout style="@style/AspectRatioDialogMessageAndActionContainer">

            <TextView
                android:id="@+id/aspect_ratio_dialog_title"
                style="@style/AspectRatioDialogTitle"
                android:text="@string/aspect_ratio_dialog_title" />

            <TextView
                android:id="@+id/aspect_ratio_dialog_message"
                style="@style/AspectRatioDialogMessageTextView"
                android:text="@string/aspect_ratio_dialog_message" />

            <Button
                android:id="@+id/button_close"
                style="@style/AspectRatioDialogCloseButton"
                android:text="@string/aspect_ratio_dialog_close_button_text" />

            <Button
                android:id="@+id/button_apply"
                style="@style/AspectRatioDialogApplyButton"
                android:text="@string/aspect_ratio_dialog_apply_button_text" />

        </LinearLayout>

        <LinearLayout style="@style/AspectRatioDialogOptionsContainer">

            <RadioGroup
                android:id="@+id/aspect_ratio_radio_group"
                style="@style/AspectRatioDialogOptionsRadioGroup">

                <!-- Radio Button tag values should be the integer value corresponding to the aspect
                    ratio values defined in PackageManager.UserMinAspectRatio -->

                <RadioButton
                    style="@style/AspectRatioDialogOptionsRadioButton"
                    android:text="@string/aspect_ratio_dialog_app_default_text"
                    android:tag="7" />

                <RadioButton
                    style="@style/AspectRatioDialogOptionsRadioButton"
                    android:text="@string/aspect_ratio_dialog_full_screen_text"
                    android:tag="6" />

                <RadioButton
                    style="@style/AspectRatioDialogOptionsRadioButton"
                    android:text="@string/aspect_ratio_dialog_half_screen_text"
                    android:tag="1" />

            </RadioGroup>

        </LinearLayout>

</LinearLayout>
