<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Radio Button tag values should be the integer value corresponding to the aspect
        ratio values defined in PackageManager.UserMin -->

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="7"
        android:text="@string/aspect_ratio_dialog_app_default_text" />

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="6"
        android:text="@string/aspect_ratio_dialog_full_screen_text" />

    <RadioButton
        style="@style/DialogOptionsRadioButton"
        android:tag="1"
        android:text="@string/aspect_ratio_dialog_half_screen_text" />

</merge>
